# InfiniteRunner

./: LICENCE  README.md  pyproject.toml
Src/: .gitignore  README.md  pyproject.toml
Src/Game/: Constants.py  Game.py  Input.py  Object.py  Player.py  Screen.py  test_game.py
Src/Game_Karol_Warda/: Game.py  Screen.py  __init__.py
Src/Game_Karol_Warda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Src/docs/: Game.rst  conf.py  modules.rst
Src/docs/_build/doctrees/: Game.doctree  environment.pickle  index.doctree  modules.doctree
Src/docs/_build/html/: .buildinfo  modules.html
Src/docs/_build/html/_modules/Game/: test_game.html
Src/docs/html/: Game.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Src/docs/html/_modules/: index.html
Src/docs/html/_modules/Game/: Constants.html  Player.html  Screen.html
Src/docs/html/_sources/: index.rst.txt
docs/: conf.py
docs/html/_modules/Game/: Game.html  Input.html  Object.html
