[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Game_Karol_Warda"
version = "0.0.1"
authors = [
  { name="Karol Warda", email="karol.warda@student.uksw.edu.pl" },
]
description = "A chrome dino game replica"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame",
]